--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,9 @@ dist.dir=dist
 dist.jar=${dist.dir}/QuanLyKho.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-5.1.44-bin.jar=/home/nghia/Downloads/mysql-connector-java-5.1.44/mysql-connector-java-5.1.44-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.44-bin.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
