--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.44-bin.jar=src/Lib/mysql-connector-java-5.1.44-bin.jar
 file.reference.swingx-1.6.1.jar=src/Lib/swingx-1.6.1.jar
-file.reference.swingx-all-1.6.4.jar=src/Lib/swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.44-bin.jar}:\
-    ${file.reference.swingx-1.6.1.jar}:\
-    ${file.reference.swingx-all-1.6.4.jar}
+    ${file.reference.swingx-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
