--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,11 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=QuanLyKho
+application.vendor=DELL
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,15 +28,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/QuanLyKho.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-5.1.44-bin.jar=src/Lib/mysql-connector-java-5.1.44-bin.jar
-file.reference.swingx-1.6.1.jar=src/Lib/swingx-1.6.1.jar
 file.reference.swingx-all-1.6.4.jar=src\\Lib\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.44-bin.jar}:\
-    ${file.reference.swingx-1.6.1.jar}:\
     ${file.reference.swingx-all-1.6.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
