--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,35 @@ dist.jar=${dist.dir}/QuanLyKho.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.8.0.jar=src\\Lib\\commons-beanutils-1.8.0.jar
+file.reference.commons-collections-3.2.1.jar=src\\Lib\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=src\\Lib\\commons-digester-2.1.jar
+file.reference.commons-logging-1.1.1.jar=src\\Lib\\commons-logging-1.1.1.jar
+file.reference.groovy-all-2.0.1.jar=src\\Lib\\groovy-all-2.0.1.jar
+file.reference.iText-2.1.7.js2.jar=src\\Lib\\iText-2.1.7.js2.jar
+file.reference.jasperreports-5.6.0.jar=src\\Lib\\jasperreports-5.6.0.jar
+file.reference.jasperreports-applet-5.6.0.jar=src\\Lib\\jasperreports-applet-5.6.0.jar
+file.reference.jasperreports-fonts-5.6.0.jar=src\\Lib\\jasperreports-fonts-5.6.0.jar
+file.reference.jasperreports-javaflow-5.6.0.jar=src\\Lib\\jasperreports-javaflow-5.6.0.jar
 file.reference.mysql-connector-java-5.1.44-bin.jar=src/Lib/mysql-connector-java-5.1.44-bin.jar
+file.reference.poi-3.7-20101029.jar=src\\Lib\\poi-3.7-20101029.jar
 file.reference.swingx-all-1.6.4.jar=src\\Lib\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.44-bin.jar}:\
-    ${file.reference.swingx-all-1.6.4.jar}
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}:\
+    ${file.reference.jasperreports-applet-5.6.0.jar}:\
+    ${file.reference.jasperreports-fonts-5.6.0.jar}:\
+    ${file.reference.jasperreports-javaflow-5.6.0.jar}:\
+    ${file.reference.poi-3.7-20101029.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
