--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,8 @@ file.reference.jasperreports-5.6.0.jar=src\\Lib\\jasperreports-5.6.0.jar
 file.reference.jasperreports-applet-5.6.0.jar=src\\Lib\\jasperreports-applet-5.6.0.jar
 file.reference.jasperreports-fonts-5.6.0.jar=src\\Lib\\jasperreports-fonts-5.6.0.jar
 file.reference.jasperreports-javaflow-5.6.0.jar=src\\Lib\\jasperreports-javaflow-5.6.0.jar
+file.reference.jcommon-1.0.0.jar=src\\Lib\\jcommon-1.0.0.jar
+file.reference.jfreechart-1.0.1.jar=src\\Lib\\jfreechart-1.0.1.jar
 file.reference.mysql-connector-java-5.1.44-bin.jar=src/Lib/mysql-connector-java-5.1.44-bin.jar
 file.reference.poi-3.7-20101029.jar=src\\Lib\\poi-3.7-20101029.jar
 file.reference.swingx-all-1.6.4.jar=src\\Lib\\swingx-all-1.6.4.jar
@@ -58,7 +60,9 @@ javac.classpath=\
     ${file.reference.jasperreports-applet-5.6.0.jar}:\
     ${file.reference.jasperreports-fonts-5.6.0.jar}:\
     ${file.reference.jasperreports-javaflow-5.6.0.jar}:\
-    ${file.reference.poi-3.7-20101029.jar}
+    ${file.reference.poi-3.7-20101029.jar}:\
+    ${file.reference.jcommon-1.0.0.jar}:\
+    ${file.reference.jfreechart-1.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
