add Libraries for Excel

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,7 @@ file.reference.commons-beanutils-1.8.0.jar=src\\Lib\\commons-beanutils-1.8.0.jar
 file.reference.commons-collections-3.2.1.jar=src\\Lib\\commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=src\\Lib\\commons-digester-2.1.jar
 file.reference.commons-logging-1.1.1.jar=src\\Lib\\commons-logging-1.1.1.jar
+file.reference.curvesapi-1.04.jar=src\\Lib\\curvesapi-1.04.jar
 file.reference.groovy-all-2.0.1.jar=src\\Lib\\groovy-all-2.0.1.jar
 file.reference.iText-2.1.7.js2.jar=src\\Lib\\iText-2.1.7.js2.jar
 file.reference.jasperreports-5.6.0.jar=src\\Lib\\jasperreports-5.6.0.jar
@@ -43,8 +44,12 @@ file.reference.jasperreports-javaflow-5.6.0.jar=src\\Lib\\jasperreports-javaflow
 file.reference.jcommon-1.0.0.jar=src\\Lib\\jcommon-1.0.0.jar
 file.reference.jfreechart-1.0.1.jar=src\\Lib\\jfreechart-1.0.1.jar
 file.reference.mysql-connector-java-5.1.44-bin.jar=src/Lib/mysql-connector-java-5.1.44-bin.jar
+file.reference.poi-3.17.jar=src\\Lib\\poi-3.17.jar
 file.reference.poi-3.7-20101029.jar=src\\Lib\\poi-3.7-20101029.jar
+file.reference.poi-ooxml-3.17.jar=src\\Lib\\poi-ooxml-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar=src\\Lib\\poi-ooxml-schemas-3.17.jar
 file.reference.swingx-all-1.6.4.jar=src\\Lib\\swingx-all-1.6.4.jar
+file.reference.xmlbeans-2.6.0.jar=src\\Lib\\xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -62,7 +67,12 @@ javac.classpath=\
     ${file.reference.jasperreports-javaflow-5.6.0.jar}:\
     ${file.reference.poi-3.7-20101029.jar}:\
     ${file.reference.jcommon-1.0.0.jar}:\
-    ${file.reference.jfreechart-1.0.1.jar}
+    ${file.reference.jfreechart-1.0.1.jar}:\
+    ${file.reference.curvesapi-1.04.jar}:\
+    ${file.reference.poi-3.17.jar}:\
+    ${file.reference.poi-ooxml-3.17.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
