--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-beanutils-1.8.0.jar=src\\Lib\\commons-beanutils-1.8.0.jar
+file.reference.commons-codec-1.10.jar=src\\Lib\\commons-codec-1.10.jar
 file.reference.commons-collections-3.2.1.jar=src\\Lib\\commons-collections-3.2.1.jar
+file.reference.commons-collections4-4.1.jar=src\\Lib\\commons-collections4-4.1.jar
 file.reference.commons-digester-2.1.jar=src\\Lib\\commons-digester-2.1.jar
 file.reference.commons-logging-1.1.1.jar=src\\Lib\\commons-logging-1.1.1.jar
 file.reference.curvesapi-1.04.jar=src\\Lib\\curvesapi-1.04.jar
@@ -72,7 +74,9 @@ javac.classpath=\
     ${file.reference.poi-3.17.jar}:\
     ${file.reference.poi-ooxml-3.17.jar}:\
     ${file.reference.poi-ooxml-schemas-3.17.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
